fix: post meta flex wrap

--- a/assets/scss/partials/components/_post.scss
+++ b/assets/scss/partials/components/_post.scss
@@ -11,6 +11,7 @@
 
   &__meta {
     display: flex;
+    flex-wrap: wrap;
     list-style: none;
     padding: 0;
 
